--- a/css/style.css
+++ b/css/style.css
@@ -1,20 +1,26 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-body{
-    background-color: rgba(174, 174, 174, 0.658);
+:root {
+    --laranja: #ffa304e9;
+    --body-background: #aeaeaea8;
+    --background-form: #ffffff86;
 }
 
-#bg-section{
-    background-color: #ffffff86;
+body {
+    background-color: var(--body-background);
+}
+
+#bg-section {
+    background-color: var(--background-form);
     width: 30vw;
     height: 80vh;
     position: absolute;
     top: 50%;
-    left: 50%;
+    left: 30%;
     transform: translate(-50%, -50%);
     border-radius: 10px;
     display: flex;
@@ -23,45 +29,66 @@ body{
     box-shadow: 20px 20px 23px rgba(0, 0, 0, 0.316);
 }
 
-#titulo{
+#titulo {
     text-align: center;
     margin: 15px;
     font-size: 1.8em;
 }
 
 
-.area-calculo{
+.formulario {
     display: flex;
     justify-content: space-between;
     align-content: center;
     flex-direction: column;
     margin: 20px;
-    
+
 }
 
-.estilo-label{
+.estilo-label {
     font-size: 1.5em;
 }
 
-.input-estilo{
+.input-estilo {
     margin: 20px 0px;
     height: 40px;
 }
 
-
-#calcular{
-    background-color: #ffa304e9;
+#calcular {
+    background-color: var(--laranja);
     height: 40px;
     font-size: 1.5em;
     font-weight: 300;
-    border:0.5px solid rgba(0, 0, 0, 0.19);
+    border: 0.5px solid rgba(0, 0, 0, 0.19);
 }
-#calcular:hover{
+
+#calcular:hover {
     background-color: #ef9b09;
 }
 
-p,a{
+p,
+a {
     text-align: center;
     color: black;
     text-decoration: none;
+}
+
+table {
+    width: 40vw;
+    height: 20vh;
+    text-align: center;
+    border-collapse: collapse;
+    position: absolute;
+    right: 10%;
+    top: 30%;
+}
+
+.titulo-tabela {
+    font-size: 1.3em;
+    background-color: var(--laranja);
+}
+
+td,
+th {
+    border: 1px solid black;
 }
