Validação  com JS
Esta sendo desenvolvida uma validação com Java Script, para exibir na tabela o status do paciente.

--- a/css/style.css
+++ b/css/style.css
@@ -88,7 +88,13 @@ table {
     background-color: var(--laranja);
 }
 
-td,
-th {
+/* td,th {
     border: 1px solid black;
+} */
+
+
+/* Validação JS */
+.status-paciente {
+    background-color: rgba(0, 128, 0, 0.319);
 }
+
