--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,11 @@
+@import url(table.css);
+@import url(form.css);
+@import url(menuBar.css);
+@import url(footer.css);
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+
+
 * {
     margin: 0;
     padding: 0;
@@ -5,96 +13,32 @@
 }
 
 :root {
-    --laranja: #ffa304e9;
-    --body-background: #aeaeaea8;
+    --body-background: #6c6c6ca8;
     --background-form: #ffffff86;
+    --menu-bar:#00000051;
+    --background-gradient-black: linear-gradient(to right, #030303, #191818, #1c1919 , #191818, #030303);
+    --footer-background: #0F0F0F;
+
+    --title-tabela: #7D7E75;
+    
+    --button-calcular: #7D7E75;
+    --button-calcular-hover: #6d6d6a;
+
+
+    --font-Roboto: 'Roboto', sans-serif;
+    --font-color: white;
+    --font-color02: #aeaeaea8;
+
 }
 
 body {
     background-color: var(--body-background);
-}
-
-#bg-section {
-    background-color: var(--background-form);
-    width: 30vw;
-    height: 80vh;
-    position: absolute;
-    top: 50%;
-    left: 30%;
-    transform: translate(-50%, -50%);
-    border-radius: 10px;
-    display: flex;
-    justify-content: space-around;
-    flex-direction: column;
-    box-shadow: 20px 20px 23px rgba(0, 0, 0, 0.316);
-}
-
-#titulo {
-    text-align: center;
-    margin: 15px;
-    font-size: 1.8em;
+    font-family: var(--font-Roboto);
 }
 
 
-.formulario {
-    display: flex;
-    justify-content: space-between;
-    align-content: center;
-    flex-direction: column;
-    margin: 20px;
-
+@media screen and (max-width: 500px) {
+    body {
+        background-color: none;
+    }
 }
-
-.estilo-label {
-    font-size: 1.5em;
-}
-
-.input-estilo {
-    margin: 20px 0px;
-    height: 40px;
-}
-
-#calcular {
-    background-color: var(--laranja);
-    height: 40px;
-    font-size: 1.5em;
-    font-weight: 300;
-    border: 0.5px solid rgba(0, 0, 0, 0.19);
-}
-
-#calcular:hover {
-    background-color: #ef9b09;
-}
-
-p,
-a {
-    text-align: center;
-    color: black;
-    text-decoration: none;
-}
-
-table {
-    width: 40vw;
-    height: 20vh;
-    text-align: center;
-    border-collapse: collapse;
-    position: absolute;
-    right: 10%;
-    top: 30%;
-}
-
-.titulo-tabela {
-    font-size: 1.3em;
-    background-color: var(--laranja);
-}
-
-/* td,th {
-    border: 1px solid black;
-} */
-
-
-/* Validação JS */
-.status-paciente {
-    background-color: rgba(0, 128, 0, 0.319);
-}
-
