Button Calcular e titulo tabela
Trocado a cor do botão calcular e do  fundo do titulo da tabela

--- a/css/form.css
+++ b/css/form.css
@@ -120,7 +120,7 @@
     #calcular {
         padding: 5px;
         margin: 10px auto;
-
+        background-color: var(--button-title-tabela);
     }
 
     .barra-imagem {
