--- a/css/table.css
+++ b/css/table.css
@@ -72,6 +72,12 @@ td {
         padding: 0px;
         margin: 10px 0px;
     }
+
+    .titulo-tabela {
+        font-size: 1.5em;
+        font-weight: 400;
+        background-color: var(--button-title-tabela);
+    }
     
     td {
         font-size: 1em;
