--- a/css/form.css
+++ b/css/form.css
@@ -2,28 +2,29 @@
     width: 80vw;
     height: 100vh;
     margin: auto;
-    font-family: var(--font-Roboto);
 }
 
 #titulo {
     text-align: center;
     font-size: 2.5em;
-    font-family: var(--font-Roboto);
     font-weight: 200;
     padding: 40px 20px;
     text-transform: uppercase;
 }
 
 .area-calcular {
+    width: 100%;
+    height: 70%;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     gap: 20px;
+
 }
 
-#image-form {
-    height: 75vh;
-    border-radius: 2em;
-    box-shadow: 5px 5px 20px 10px rgba(0, 0, 0, 0.37);
+#image-form  {
+    width: 100%;
+    height: 100%;
+    border-radius: 25px;
 }
 
 .formulario {
@@ -52,14 +53,12 @@
 /* trocar cor do bottun e hover */
 #calcular {
     background-color: var(--button-calcular);
-    width: 50%;
-    height: 8%;
+    padding: 15px 40px;
     margin: 0px auto;
     font-size: 1.5em;
     font-weight: 400;
     text-transform: uppercase;
     border: 0.5px solid rgba(0, 0, 0, 0.19);
-    font-family: var(--font-Roboto);
 }
 
 #calcular:hover {
@@ -75,12 +74,83 @@
     background-position: right center;
 }
 
+/* LAPTOPS */
+@media screen and (min-width: 769px) and (max-width: 1024px){
+    .bg-section {
+        width: 85vw;
+        height: 80vh;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+
+    }
+
+    #titulo {
+        font-size: 2em;
+        font-weight: 400;
+        padding: 40px 20px;
+    }
+
+    .area-calcular {
+        width: 100%;
+        height: 50vh;
+        margin: 20px 0px;
+    }
+
+    #image-form  {
+        width: 100%;
+        height: 100%;
+    }
+
+    .formulario {
+        width: 40vw; 
+        height: 100%;   
+    }
+    
+    .estilo-label {
+        font-size: 1.5em;
+        margin-bottom: 0px;
+    }
+    
+    .input-estilo {
+        width: 90%;
+        height: 8vh;
+        font-size: 1.2em;
+        
+    }
+
+    #calcular {
+        padding: 10px 40px;
+        margin-top: 20px;
+        font-size: 1.2em;
+        font-weight: 600;
+
+    }
+
+    .barra-imagem {
+        width: 100%;
+        height: 35vh;
+        background-position: 30% 70%;
+
+    }
+    
+}
 
 
-@media screen and (max-width: 500px) {
+/* TABLET */
+@media screen and (min-width: 481px) and (max-width: 768px){
+
+}
+
+
+
+
+
+/* Mobile */
+@media screen  and (min-width: 320px) and (max-width: 480px) {
     .bg-section {
         width: 100vw;
-        height:75vh;
+        height:85vh;
         display: flex;
         flex-direction: column;
         justify-content: space-around;
@@ -103,9 +173,9 @@
     }
 
     .formulario {
-        width: 90vw;
+        width: 95%;
+        height: 100%;
         margin: auto;
-        
     }
 
     .estilo-label {
@@ -118,9 +188,10 @@
     }
 
     #calcular {
-        padding: 5px;
-        margin: 10px auto;
         background-color: var(--button-title-tabela);
+        font-size: 1.3em;
+        padding: 5px 10px;
+        margin: 10px auto;
     }
 
     .barra-imagem {
