--- a/css/footer.css
+++ b/css/footer.css
@@ -6,6 +6,7 @@ footer {
 .container-footer {
     width: 90vw;
     height: 50vh;
+    margin: auto;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -64,8 +65,72 @@ footer {
 
 
 
+
+/* LAPTOPS */
+@media screen and (min-width: 769px) and (max-width: 1280px) {
+    .imagem-footer {
+        display: none;
+        
+    }
+
+    .info-nav p {
+        padding: 8px 0px;
+        font-size: 1em; 
+    }
+}
+
+
+
+/* TABLET */
+@media screen and (min-width: 481px) and (max-width: 768px){
+    .container-footer {
+        display: none;
+    }
+    
+    .mobile-footer {
+        height: 40vh;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        margin: 10px;
+        
+    }
+
+    .imagem-footer {
+        width: 100%;
+        height: 40%;
+        margin-bottom: 15px;
+    }
+
+    .title-footer {
+        font-size: 2.5em;
+    }
+
+    .mobile-footer p {
+        font-size: 1.8em;
+    }
+
+    .mobile-footer p {
+        font-size: 1.1em;
+        padding: 5px;
+    }
+
+    #midias-sociais {
+        margin: 20px;
+    }
+
+    .itens-social-midia {
+        width: 40px;
+        margin: 0px 15px;
+    }
+
+}
+
+
+
 /* MOBILE */
-@media screen and (max-width: 500px){ 
+@media screen and (max-width: 480px){ 
     .container-footer {
         display: none;
     }
@@ -108,18 +173,4 @@ footer {
         margin: 0px 15px;
     }
     
-}
-
-
-/* LAPTOPS */
-@media screen and (min-width: 769px) and (max-width: 1024px) {
-    .imagem-footer {
-        display: none;
-        
-    }
-
-    .info-nav p {
-        padding: 8px 0px;
-        font-size: 1em; 
-    }
 }
