--- a/css/form.css
+++ b/css/form.css
@@ -2,6 +2,9 @@
     width: 80vw;
     height: 100vh;
     margin: auto;
+     display: flex;
+     flex-direction: column;
+     justify-content: space-around;
 }
 
 #titulo {
@@ -14,21 +17,23 @@
 
 .area-calcular {
     width: 100%;
-    height: 70%;
+    height: 60%;
     display: flex;
     justify-content: space-around;
+    align-content: center;
     gap: 20px;
 
 }
 
 #image-form  {
     width: 100%;
-    height: 100%;
+    height: 95%;
     border-radius: 25px;
 }
 
 .formulario {
     width: 40vw;
+    height: 60vh;
     display: flex;
     justify-content: space-around;
     align-content: center;
@@ -54,7 +59,7 @@
 #calcular {
     background-color: var(--button-calcular);
     padding: 15px 40px;
-    margin: 0px auto;
+    margin: 20px auto;
     font-size: 1.5em;
     font-weight: 400;
     text-transform: uppercase;
@@ -74,8 +79,11 @@
     background-position: right center;
 }
 
+
+
+
 /* LAPTOPS */
-@media screen and (min-width: 769px) and (max-width: 1024px){
+@media screen and (min-width: 769px) and (max-width: 1280px){
     .bg-section {
         width: 85vw;
         height: 80vh;
@@ -127,6 +135,11 @@
 
     }
 
+    #calcular:hover {
+        background-color: none;
+    }
+    
+
     .barra-imagem {
         width: 100%;
         height: 35vh;
@@ -139,7 +152,47 @@
 
 /* TABLET */
 @media screen and (min-width: 481px) and (max-width: 768px){
+    .bg-section {
+        width: 80vw;
+        height: 100vh;
+    } 
 
+    #titulo {
+        font-size: 2em;
+        font-weight: 600;  
+    }
+
+    
+    .area-calcular {
+        width: 100%;
+        height: 70vh;
+        display: block;
+        justify-content: none;
+        align-content: none;
+        gap: none;
+
+    }
+
+    #image-form  {
+        display: none;
+    }
+
+    .formulario {
+        width: 100%;
+        height: none;
+    }
+
+    .estilo-label {
+        font-size: 1.8em;
+    }
+
+    #calcular:hover {
+        background-color: none;
+    }
+
+    .barra-imagem {
+        height: 40vh;
+    }   
 }
 
 
@@ -147,7 +200,7 @@
 
 
 /* Mobile */
-@media screen  and (min-width: 320px) and (max-width: 480px) {
+@media screen and (max-width: 480px) {
     .bg-section {
         width: 100vw;
         height:85vh;
@@ -193,6 +246,11 @@
         padding: 5px 10px;
         margin: 10px auto;
     }
+
+    #calcular:hover {
+        background-color: none;
+    }
+    
 
     .barra-imagem {
         height: 25vh;
