--- a/css/form.css
+++ b/css/form.css
@@ -2,9 +2,9 @@
     width: 80vw;
     height: 100vh;
     margin: auto;
-     display: flex;
-     flex-direction: column;
-     justify-content: space-around;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
 }
 
 #titulo {
@@ -85,7 +85,7 @@
 /* LAPTOPS */
 @media screen and (min-width: 769px) and (max-width: 1280px){
     .bg-section {
-        width: 85vw;
+        width: 95vw;
         height: 80vh;
         display: flex;
         flex-direction: column;
@@ -103,11 +103,12 @@
         width: 100%;
         height: 50vh;
         margin: 20px 0px;
+        gap: none;
     }
 
     #image-form  {
         width: 100%;
-        height: 100%;
+        height: 50vh;
     }
 
     .formulario {
